<resources>
    <string name="app_name">Cursos</string>

    <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="text_home">Elige una opción</string>
    <string name="deeplink">Deep Link</string>

    <!-- Screen strings -->
    <string name="courses">Cursos</string>
    <string name="my_courses">Mis cursos</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>


    <string name="init_fragment">Elige una opción</string>
    <string name="text_fragment_courses">Categoría</string>
    <string name="text_fragment_courses2">Ver todo</string>
    <string name="button_courses">Cursos</string>
    <string name="button_my_courses">Mis cursos</string>
    <string name="button_design">Diseño</string>
    <string name="button_prog">Programación</string>
    <string name="button_web">Desarrollo Web</string>
    <string name="tv_duration">10</string>
    <string name="name_course">Nombre Curso</string>
    <string name="tv_price">10</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_buy">Comprar</string>
    <string name="buys">Mis cursos</string>
</resources>